# MMBT-Messy-Model-Bench-Tests

./: .gitignore  ACTIONABLE_FINDINGS_INDEX.md  COMPARISON.md  FIELD-REPORTS.md  KNOWN-LIMITATIONS.md  LICENSE  NOTICE  README.md  ROADMAP.md  SCORECARD.md
agent-pilot/: Dockerfile  FAILURE-TAXONOMY.md  HARNESS-CHANGELOG.md  harness.py  launch-commands.md  task_board_presentation.md  task_dreamserver_pr_audit.md  task_market_research.md  task_pr_audit_n1.md  task_project_mgmt.md  task_triage.md
analysis/: dependency-graph.md  risk-matrix.md
benchmarks/: findings-index.md
decisions/: 0001-risk-scoring.md
findings/: 2026-04-26-27b-awq-canonical-run.md  2026-04-26-27b-awq-investment-memo-v1.md  2026-04-26-27b-awq-investment-memo-v2.md  2026-04-26-2x3x3-grid-consolidated.md  2026-04-26-board-presentation-task-pilot.md  2026-04-26-coder-next-canonical-run.md  2026-04-26-coder-next-investment-memo-pilot.md  2026-04-26-coder-next-v5-and-harness-argv-fix.md  2026-04-26-variance-batch-n3.md  2026-04-27-dreamserver-pr-audit-summary.md  2026-04-28-coding-and-business-microbenches.md  PHASE_B_RESUME.md  (+4 more)
tooling/inputs/phase2_ci_failure/: CHANGELOG.md  pyproject.toml
tooling/inputs/phase2_ci_failure/src/discountkit/: cart.py
tooling/inputs/phase2_ci_failure/tests/: test_cart.py  test_discount.py
tooling/inputs/phase2_hallucination/: README.md  pyproject.toml
tooling/inputs/phase2_hallucination/logalyzer/: __init__.py  aggregate.py  experimental.py  filters.py  parser.py  utils.py
tooling/inputs/phase2_hallucination/tests/: test_aggregate.py  test_filters.py
(+3960 files in other folders)
