[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discountkit"
version = "0.3.1"
description = "Tiny discount-and-cart-total library for testing CI flows."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5"]

[tool.hatch.build.targets.wheel]
packages = ["src/discountkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []
