[project]
name = "logalyzer"
version = "0.3.1"
description = "Web server log analyzer"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
logalyzer = "logalyzer.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["logalyzer*"]
exclude = ["tests*", "benchmarks*"]
